--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,16 +1,46 @@
 <% layout (`layouts/boilerplate.ejs`)%>
-<h1>Edit campground</h1>
-<form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
-    <div>
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="<%=campground.title%>">
 
-    </div>
-    <div>
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" value="<%=campground.location%>">
+<div class="row">
+    <h1 class="text-center">New campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Name:</label>
+                <input class="form-control" type="text" id="title" name="title" value="<%=campground.title%>">
 
+            </div>
+
+            <div class=" mb-3">
+                <label class="form-label" for="location">Location:</label>
+                <input class="form-control" type="text" id="location" name="location" value="<%=campground.location%>">
+
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" id="image" name="image" value="<%=campground.image%>">
+            </div>
+
+            <div class="col-3">
+                <label class="form-label" for="price">Price:</label>
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text">$</span>
+                <input id="price" type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
+                    name="price" value="<%=campground.price%>">
+                <span class="input-group-text">.00</span>
+
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="image">Description</label>
+                <textarea class="form-control" type="text" id="description"
+                    name="description"><%=campground.description%>"</textarea>
+
+            </div>
+
+            <input class="btn btn-primary mt-3" type="submit" value="Submit">
+        </form>
+        <div class="mt-3 mb-3"><a href="/campgrounds/<%=campground._id%>">Back</a></div>
     </div>
-    <button>Edit Campgrounds</button>
-</form>
-<a href="/campgrounds/<%=campground._id%>">Back to campground</a>
+</div>
