--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,13 +11,16 @@
 
 </head>
 
+
 <body class="d-flex flex-column vh-100">
+
     <%-include(`../partials/navbar.ejs`)%>
-    <main class="container mt-5"> <%- body %></main>
+    <main class="container mt-5"> <%-include(`../partials/flash.ejs`)%><%- body %></main>
     <%-include(`../partials/footer.ejs`)%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+<script src="./public/javascript/validateForms"></script>
 
 </html>
